tests/miniJava/pos/001045_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) if ( 0 ) { } else { } else System.out.println ( { } ) ; } }
