tests/miniJava/neg/006694_mutation.MiniJava
class java { public static void public int [] java ( ) { return 0 ; } ( String [ ] java ) { { } } }
